<resources>
    <string name="app_name">Lab 3</string>
    <string name="fullName">Surname and name</string>
    <string name="address">Address</string>
    <string name="comment">Comment</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="verification">Are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

</resources>