<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:hint="@string/name"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameInputLayout"
        android:hint="@string/surname"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="@dimen/text_size_button2"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="@id/surnameInputLayout"
        app:layout_constraintTop_toBottomOf="@id/surnameInputLayout" />


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size_button2"
        android:layout_margin="@dimen/margin"
        app:layout_constraintEnd_toEndOf="@id/surnameInputLayout"
        app:layout_constraintTop_toBottomOf="@id/surnameInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>