<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentInputLayout"
        android:hint="@string/comment"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="@dimen/text_size_button2"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="@id/commentInputLayout"
        app:layout_constraintTop_toBottomOf="@id/commentInputLayout" />


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size_button2"
        android:layout_margin="@dimen/margin"
        app:layout_constraintEnd_toEndOf="@id/commentInputLayout"
        app:layout_constraintTop_toBottomOf="@id/commentInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>